--- a/.evg.yml
+++ b/.evg.yml
@@ -62,16 +62,23 @@ tasks:
             export GOPATH=`pwd`
             export PATH="`pwd`:$PATH"
             cd src/github.com/10gen/stitch-cli
+            export VERSION=20180301
             export GOARCH=amd64
             export GOOS=linux
+            export OSARCH=linux-amd64
             echo "Building stitch-cli for $GOOS on $GOARCH"
-            go build -o stitch-cli-linux-amd64 main.go
+            REPLACE_VARS="-ldflags \"-X github.com/10gen/stitch-cli/utils.cliVersion=$VERSION -X github.com/10gen/stitch-cli/utils.cliOSArch=$OSARCH\""
+            eval go build $REPLACE_VARS -o stitch-cli-linux-amd64 main.go
             export GOOS=darwin
+            export OSARCH=macos-amd64
+            REPLACE_VARS="-ldflags \"-X github.com/10gen/stitch-cli/utils.cliVersion=$VERSION -X github.com/10gen/stitch-cli/utils.cliOSArch=$OSARCH\""
             echo "Building stitch-cli for $GOOS on $GOARCH"
-            go build -o stitch-cli-macos-amd64 main.go
+            eval go build $REPLACE_VARS -o stitch-cli-macos-amd64 main.go
             export GOOS=windows
+            export OSARCH=windows-amd64
+            REPLACE_VARS="-ldflags \"-X github.com/10gen/stitch-cli/utils.cliVersion=$VERSION -X github.com/10gen/stitch-cli/utils.cliOSArch=$OSARCH\""
             echo "Building stitch-cli for $GOOS on $GOARCH"
-            go build -o stitch-cli-windows-amd64 main.go
+            eval go build $REPLACE_VARS -o stitch-cli-windows-amd64 main.go
       - command: s3.put
         params:
           aws_key: ${artifacts_aws_key}
