--- a/.evg.yml
+++ b/.evg.yml
@@ -80,6 +80,33 @@ functions:
               exit 1
             fi
           done
+    "submit_coverage":
+      - command: shell.exec
+        params:
+          silent: true
+          script: |
+            set -e
+            echo export COVERALLS_TOKEN=${coveralls_repo_token} >> creds
+      - command: shell.exec
+        params:
+          script: |
+            set -e
+            export GOPATH=`pwd`
+            export PATH="`pwd`:$PATH"
+            source ./creds
+            go get github.com/mattn/goveralls
+            if [ -z "${github_pr_number}" ]
+            then
+              if [ "${is_patch}" = "true" ]; then
+                exit 0
+              fi
+            else
+              PR_INFO=`curl https://api.github.com/repos/${github_org}/${github_repo}/pulls/${github_pr_number}`
+              BRANCH=`echo $PR_INFO | python -c "import sys, json; print json.load(sys.stdin)['head']['ref']"`
+              export CI_BRANCH=$BRANCH
+              export CI_PULL_REQUEST=${github_pr_number}
+            fi
+            $GOPATH/bin/goveralls -coverprofile=cover.out
 
 tasks:
   - name: test_unit
@@ -93,7 +120,8 @@ tasks:
             set -e
             export GOPATH=`pwd`
             export PATH="`pwd`:$PATH"
-            go test -v $(go list github.com/10gen/stitch-cli/...) > $GOPATH/stitch-cli.suite
+            go test -v -covermode=count -coverprofile=cover.out $(go list github.com/10gen/stitch-cli/...) > $GOPATH/stitch-cli.suite
+      - func: "submit_coverage"
 
   - name: tests-with-cloud
     exec_timeout_secs: 3600
@@ -114,7 +142,8 @@ tasks:
             export STITCH_MONGODB_CLOUD_API_KEY="${stitch_mongodb_cloud_api_key}"
             export STITCH_MONGODB_CLOUD_API_BASE_URL="${mongoDBCloudURL}"
             export STITCH_SERVER_BASE_URL="${stitchServerURL}"
-            go test -v $(go list github.com/10gen/stitch-cli/${cloud_dependent_pkg}/...) -timeout 25m  -run TestCloud > $GOPATH/stitch-cli.suite
+            go test -v -covermode=count -coverprofile=cover.out $(go list github.com/10gen/stitch-cli/${cloud_dependent_pkg}/...) -timeout 25m  -run TestCloud > $GOPATH/stitch-cli.suite
+      - func: "submit_coverage"
 
   - name: gometalinter
     commands:
