--- a/.evg.yml
+++ b/.evg.yml
@@ -97,12 +97,14 @@ functions:
           source ./creds
           go get github.com/edaniels/goveralls
           export COVERALLS_PARALLEL=true
+          export COVERALLS_GIT_COMMIT=${revision}
           export BUILD_NUMBER="${build_id}"
           if [ -z "${github_pr_number}" ]
           then
             if [ "${is_patch}" = "true" ]; then
               exit 0
             fi
+            export CI_BRANCH=${branch_name}
           else
             PR_INFO=`curl  -H "Authorization: bearer ${github_api_token}" https://api.github.com/repos/${github_org}/${github_repo}/pulls/${github_pr_number}`
             BRANCH=`echo $PR_INFO | python -c "import sys, json; print json.load(sys.stdin)['head']['ref']"`
