--- a/.evg.yml
+++ b/.evg.yml
@@ -228,7 +228,12 @@ tasks:
       - name: test_unit
       - name: tests-with-cloud
     commands:
-      - func: "setup_environment"
+      - command: shell.exec
+        params:
+          silent: true
+          script: |
+            set -e
+            echo export COVERALLS_TOKEN=${coveralls_repo_token} >> creds
       - command: shell.exec
         params:
           silent: true
